example-app/templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: example-app
  namespace: example-app
spec:
  selector:
    app: example-app
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
