example-app/templates/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: example-app-route
  namespace: example-app
spec:
  parentRefs:
  - name: api-gateway
    namespace: consul
  hostnames:
  - www.cluster.local
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: example-app
      port: 80
